Slight footer fix on mobile and updated reg page

--- a/src/components/styles/footer.css
+++ b/src/components/styles/footer.css
@@ -41,6 +41,9 @@
     flex-direction: row;
     vertical-align: middle;
     margin: -1.8em 0 -1.4em 0;
+    @media screen and (max-width: 781px) {
+        margin-top: -11vh;
+    }
 }
 
 .images>div {
@@ -77,7 +80,11 @@
     color: white;
     /* background: linear-gradient(#0BCFE6, #FFFFFF); */
     @media screen and (max-width: 781px) {
-        margin-top: 20vh;
+        margin-top: 0vh;
+        width: 50%;
+        display: inline-flex;
+        .copyright-text {text-align: left; min-width: 40vw;}
+        .credit {text-align: right; min-width: 40vw; vertical-align: bottom;}
     }
 }
 
